# agent-skills

./: .gitignore  AGENTS.md  LICENSE  README.md
.github/workflows/: deephaven-core-ci.yml  external-links-check.yml
skills/deephaven-core-query-writing/: SKILL.md
skills/deephaven-core-query-writing/references/: aggregations.md  csv.md  iceberg.md  joins.md  kafka.md  plotting.md  sitemap.md  time-operations.md  ui.md  updateby.md
tools/: analyze_evals.py  check_api_surface.py  check_external_links.py  check_links.py  check_python.py  config.py  download_eval_data.py  evals_aggregate_prompt.md  evals_prompt.md  evals_unified_prompt.md  lint_blocks.py  parse_session.py  pyproject.toml  run_each_block.py  run_evals.py  token_count.py  token_tui.py  validate.py
tools/data/: stocks.csv
tools/evals/: aggregate.py  evals.json  generate_review.py  grade.py  preamble-with-skill.md  prompt.md  run_evals.py  screenshot.py  viewer.html
tools/evals/notes/: dh-render-capabilities.md  eval-design.md  research-summary.md
tools/evals2/: aggregate.py  generate_review.py  grade.py  preamble-with-skill.md  preamble-without-skill.md  prompt.md  run_evals.py
tools/evals2/notes/: dh-render-capabilities.md  eval-design.md
