[project]
name = "deephaven-core-build"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0", "httpx>=0.27", "rich>=13.0", "playwright>=1.40"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.16",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[project.scripts]
validate = "validate:main"
check-links = "check_links:main"
check-external-links = "check_external_links:main"
check-python = "check_python:main"
run-each-block = "run_each_block:main"
lint-blocks = "lint_blocks:main"
download-eval-data = "download_eval_data:main"
parse-session = "parse_session:main"
run-evals = "evals.run_evals:main"
grade-evals = "evals.grade:main"
aggregate-evals = "evals.aggregate:main"
